Removed overflow-x from main, fixing stuff for phones

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
 	background-color: rgb(250, 250, 250);
 	min-height: 100vh;
 	position:relative;
+	overflow-x: hidden;
 }
 
 * {
